--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "awesome-links",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "ts-node": "ts-node --compiler-options '{\"module\":\"CommonJS\"}'"
   },
   "dependencies": {
     "next": "^12.0.7",
@@ -15,11 +17,17 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
-    "@types/node": "^16.3.2",
+    "@types/node": "^16.11.36",
     "@types/react": "^17.0.14",
     "autoprefixer": "^10.4.1",
+    "esbuild": "^0.14.39",
     "postcss": "^8.4.5",
+    "prisma": "^3.14.0",
     "tailwindcss": "^3.0.8",
-    "typescript": "^4.3.5"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
